syntax = "proto3";

package carefree.project.home.room.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/carefree/api/project/hoom/room/v1;room_proto";


service RoomService {
  rpc CreateRoom(CreateRoomRequest) returns (Room);  
  rpc UpdateRoom(UpdateRoomRequest) returns (Room);
  rpc DeleteRoom(DeleteRoomRequest) returns (google.protobuf.Empty);
  rpc GetRoom(GetRoomRequest) returns (Room);
}

message Room{
    message BookMark{
        string title=1;
        string image=2;
        string link=3;
        repeated string lables=4;
    }
    message Group{
        string title=1;
        string style =2;
        bool display=3;
        repeated BookMark bookmarks=4;
    }
    string name =1;
    string background =3;
    map<string, Group> groups = 4;
}

message CreateRoomRequest{
    // room id
    string id=1;
    Room room=2;
}

message UpdateRoomRequest{
    Room room=1;
}

message DeleteRoomRequest{
    string name=1;
}

message GetRoomRequest{
    string name=1;
}
